--- a/app/templates/make-post.html
+++ b/app/templates/make-post.html
@@ -12,7 +12,11 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="page-heading">
+                    {% if edit %}
+                    <h1>Edit Post</h1>
+                    {% else %}
                     <h1>New Post</h1>
+                    {% endif %}
                     <span class="subheading">You're going to make a great blog post!</span>
                 </div>
             </div>
