--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% include 'header.html' %}
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
+<header class="masthead"
+    style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
@@ -27,6 +28,7 @@
                     Posted by
                     <a href="#!">{{ post.author}}</a>
                     {{ post.date }}
+                    <a href="{{ url_for('views.delete_post', post_id=post.id)}}">✘</a>
                 </p>
             </div>
             <!-- Divider-->
